--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -5,21 +5,68 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/general.css"/>
+    <link rel="stylesheet" href="/css/style.css">
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <style>
+        div.container-fluid {
+            top: 50%;
+            left: 50%;
+        }
+    </style>
 
 </head>
 <body>
-<div th:insert="~{navigation :: nav}"></div>
-<div class="container-fluid">
-    <div class="row">
-        <div class="jumbotron">
-            <h1>出错了！！！</h1>
-            <p th:text="${message}"></p>
-            <p><a class="btn btn-primary btn-lg" href="/" role="button">回到主页</a></p>
-        </div>
+<div class="moon"></div>
+<div class="moon__crater moon__crater1"></div>
+<div class="moon__crater moon__crater2"></div>
+<div class="moon__crater moon__crater3"></div>
+
+<div class="star star1"></div>
+<div class="star star2"></div>
+<div class="star star3"></div>
+<div class="star star4"></div>
+<div class="star star5"></div>
+
+<div class="error">
+    <div class="error__title">404</div>
+    <div class="error__subtitle">Hmmm...</div>
+    <div class="error__description">这个网页正在星际漫游....</div>
+    <p style="margin-top: 20px;"><a class="error__button error__button--active" href="/" role="button">回到主页</a></p>
+</div>
+
+<div class="astronaut">
+    <div class="astronaut__backpack"></div>
+    <div class="astronaut__body"></div>
+    <div class="astronaut__body__chest"></div>
+    <div class="astronaut__arm-left1"></div>
+    <div class="astronaut__arm-left2"></div>
+    <div class="astronaut__arm-right1"></div>
+    <div class="astronaut__arm-right2"></div>
+    <div class="astronaut__arm-thumb-left"></div>
+    <div class="astronaut__arm-thumb-right"></div>
+    <div class="astronaut__leg-left"></div>
+    <div class="astronaut__leg-right"></div>
+    <div class="astronaut__foot-left"></div>
+    <div class="astronaut__foot-right"></div>
+    <div class="astronaut__wrist-left"></div>
+    <div class="astronaut__wrist-right"></div>
+
+    <div class="astronaut__cord">
+        <canvas id="cord" height="500px" width="500px"></canvas>
+    </div>
+
+    <div class="astronaut__head">
+        <canvas id="visor" width="60px" height="60px"></canvas>
+        <div class="astronaut__head-visor-flare1"></div>
+        <div class="astronaut__head-visor-flare2"></div>
     </div>
 </div>
+
+<script  src="js/script.js"></script>
+
 <div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
