--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
 <div th:fragment="foot">
-    <div style="color: #666; padding: 10px 20%; ">Copyright © 2020 · 学习生活交流论坛 · 阿里云 · 网站程序: Spring-Boot · ICP备000000号</div>
+    <div style="color: #666; padding: 10px 20%; margin: 0 auto; margin-top: 50px; text-align: center">Copyright © 2020 · 学习生活交流论坛 · 阿里云 · 网站程序: Spring-Boot · ICP备000000号</div>
 </div>
 </body>
 </html>
