--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
     <style type="text/css">
         div{
+            width: 1000px;
+            margin: auto;
+        }
+        div[type='tutor']{
+            width: 800px;
             background-color: #F0F0F0;
             border-radius: 20px;
-            width: 800px;
             margin: auto;
             margin-bottom: 50px;
             padding-top: 10px;
@@ -75,7 +79,7 @@
 </head>
 <body>
 <h1 style="text-align: center;">新手教程</h1>
-<div>
+<div type="tutor">
     <p>欢迎来到学习生活论坛，本论坛旨在为用户提供学习生活的交流平台。为保障您的使用体验，请认真阅读以下教程。</br>
 
     <h2>一、论坛概述</h2>
