--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -5,46 +5,103 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="/css/general.css"/>
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
+
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span th:text="${sectionName}"></span></h2>
             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'questions'}">
-                <div class="container-fluid">
-                    <div><a class="navbar-brand" href="/profile/questions?area=question">讨论区</a></div>
-                    <div><a class="navbar-brand" href="/profile/questions?area=recommend">课程区</a></div>
-                    <div><a class="navbar-brand" href="/profile/questions?area=code">题解区</a></div>
-                    <div><a class="navbar-brand" href="/profile/questions?area=campus">校园区</a></div>
-                    <div><a class="navbar-brand" href="/profile/questions?area=share">资源区</a></div>
-                </div>
-                <input type="hidden" name="area" id="area" th:value="${area}">
-                <div class="media" th:each="question: ${pagination.data}">
-                    <div class="media-left">
-                        <a href="#">
-                            <img class="media-object img-rounded"
-                                 th:src="${question.user.avatarUrl}"
-                                 alt="这是一张标识图" style="width: 38px;height: 38px">
+            <div style="float: left;width: 200px;">
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item" role="button">
+                        <a href="/profile/information" th:class="${section == 'information'}? 'active nav-link': 'nav-link'" >个人资料</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/profile/questions" th:class="${section == 'questions'}? 'active nav-link': 'nav-link'" >我的问题</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/profile/replies" th:class="${section == 'replies'}? 'active nav-link': 'nav-link'">
+                            最新回复<span class="badge" th:text="${session.unReadCount}"></span>
                         </a>
+                    </li>
+                </ul>
+
+            </div>
+            <div   class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'questions'}" style="margin-left: 220px">
+                <div class="container-fluid post-card">
+                    <div class="card mb-3" style="max-width: 100rem;">
+                        <div class="card-body" >
+                            <div style="margin: 0 auto;margin-bottom: 20px;">
+                                <ul class="nav nav-pills" style="margin: 0 auto;">
+                                    <li class="nav-item">
+                                        <a th:class="${area == 'question'}? 'active nav-link': 'nav-link'" href="/profile/questions?area=question">讨论区</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a th:class="${area == 'recommend'}? 'active nav-link': 'nav-link'" href="/profile/questions?area=recommend">课程区</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a th:class="${area == 'code'}? 'active nav-link': 'nav-link'" href="/profile/questions?area=code">题解区</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a th:class="${area == 'campus'}? 'active nav-link': 'nav-link'" href="/profile/questions?area=campus">校园区</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a th:class="${area == 'share'}? 'active nav-link': 'nav-link'" href="/profile/questions?area=share">资源区</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <input type="hidden" name="area" id="area" th:value="${area}">
+                            <div class="media my-posts" th:each="question: ${pagination.data}">
+                                <div class="media-left">
+                                    <a href="#">
+                                        <img class="media-object img-rounded"
+                                             th:src="${question.user.avatarUrl}"
+                                             alt="这是一张标识图" style="width: 40px;height: 40px">
+                                    </a>
+                                </div>
+                                <div class="media-body">
+                                    <span><a th:href="@{'/' + ${area} + '/' + ${question.id}}" th:text="${question.title}"></a></span>
+                                    <span style="font-size: 12px;font-weight: normal;color: #999">
+                                    <span th:text="${question.viewCount}"></span>次浏览 ·
+                                    <a th:href="@{'/publish/'+${question.id}}" style="color:#999;"
+                                       th:if="${session.user != null && session.user.id == question.creator && area == 'question'}">
+                                    <span class="fa fa-pencil-square-o" aria-hidden="true">编辑</span>
+                                      </a></span>
+                                </div>
+                            </div>
+                            <nav class="inpage-nav">
+                                <ul class="pagination inpage-nav-ul">
+                                    <li class="page-item" th:if="${pagination.showPrevious}">
+                                        <a class="page-link" th:href="@{'/profile/'+${section}(page=${pagination.page -1},area=${area})}" aria-label="Previous">
+                                            <span aria-hidden="true">&laquo;</span>
+                                        </a>
+                                    </li>
+                                    <li th:each="page:${pagination.pages}" th:class="${pagination.page == page}? 'page-item active':'page-item'">
+                                        <a class="page-link" th:href="@{'/profile/'+${section}(page=${page},area=${area})}" th:text="${page}">
+
+                                        </a>
+                                    </li>
+                                    <li th:if="${pagination.showNext}">
+                                        <a class="page-link" th:href="@{'/profile/'+${section}(page=${pagination.page+1},area=${area})}" aria-label="Next">
+                                            <span aria-hidden="true">&raquo;</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
-                    <div class="media-body">
-                        <span><a th:href="@{'/' + ${area} + '/' + ${question.id}}" th:text="${question.title}"></a></span>
-                        <span style="font-size: 12px;font-weight: normal;color: #999">
-                        <span th:text="${question.viewCount}"></span>次浏览 ·
-                        <a th:href="@{'/publish/'+${question.id}}" style="color:#999;"
-                           th:if="${session.user != null && session.user.id == question.creator && area == 'question'}">
-                            <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
-                        </a>
-                    </span>
-                    </div>
+
                 </div>
             </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'replies'}">
+
+            <div  class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'replies'}" style="margin-left: 220px">
                 <div class="media" th:each="notification: ${pagination.data}">
                     <div class="media-body">
                         <h5 class="media-heading">
@@ -55,71 +112,87 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'information'}">
-                <u1>
-                    <h4 th:text="${'用户名:' + session.user.name}"></h4>
-                    <form action="/image" method="post" enctype="multipart/form-data">
-                        <span style="font-size: 30px">头像:</span>
-                        <img th:src="${session.user.avatarUrl}" style="height: 50px; width: 50px">
-                        <input type="file" id="uploadImg" name="uploadImg">
-                        <button type="submit">更改头像</button>
-                    </form>
 
-                    <br>
-                    <h3><span th:text="${'等级：' + session.user.grade}"></span></h3>
-                    <h3><span th:text="${'经验值:' + session.user.empiricalValue}"></span></h3>
-                    <form action="/password" method="post">
-                        <label for="oldPassword">用户名:</label>
-                        <input type="password" class="form-control" id="oldPassword" name="oldPassword"  placeholder="原密码">
-                        <span class="alert alert-danger" th:text="${error}" th:if="${error != null}"></span>
-                        <label for="newPassword">密码:</label>
-                        <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="新密码">
-                        <button type="submit" class="btn btn-success">修改密码</button>
-                    </form>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"  th:if="${section == 'information'}"  style="margin-left: 220px">
+                <div class="container-fluid" >
+                    <div class="card border-primary mb-3" style="max-width: 25rem;margin:0 auto;margin-top:10px;opacity:0.75;">
+                        <div class="card-header" style="color:#273c75;text-align: center;opacity:1;" ><h4>用户信息</h4></div>
+                        <div class="card-body">
+                            <form action="/image" method="post" enctype="multipart/form-data">
+                                <div class="picture" style="margin-right: 10px">
+                                <img   th:src="${session.user.avatarUrl}" style="height: 50px; width: 50px">
+                                </div>
+                                <div class="ni" style="margin-right: auto;position: relative;">
+                                    <h4 class="ni" th:text="${' '+ '  昵称 : ' + session.user.name}"></h4>
+                                    <h5 class="rank" th:text="${' '+ '  等级：' + session.user.grade + '  |  ' + '经验值 : ' + session.user.empiricalValue}"></h5>
+                                </div>
+                            </form>
+                                <ul class="nav nav-tabs" style="margin-top: 10px;">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" data-toggle="tab" href="#picture">Home</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link " data-toggle="tab" href="#home">修改头像</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" data-toggle="tab" href="#profile">修改密码</a>
+                                    </li>
 
-                </u1>
+                                </ul>
+                                <div id="myTabContent" class="tab-content">
+                                    <div class="tab-pane fade show active" id="picture" style="text-align: center">
+                                        <p style="margin-top: 30px;margin-bottom: 20px;">临近期末，你的DDL都完成了吗？</p>
+                                    </div>
+                                    <div class="tab-pane fade" id="home">
+                                        <form action="/image" method="post" enctype="multipart/form-data" style="margin-top: 10px;margin-bottom: 10px;">
+                                            <input type="file" id="uploadImg" name="uploadImg">
+                                            <button type="submit" class="btn btn-success">更改头像</button>
+                                        </form>
+
+                                    </div>
+                                    <div class="tab-pane fade" id="profile" style="margin-top: 10px;">
+                                        <form action="/password" method="post" >
+                                            <label for="oldPassword">原始密码:</label>
+                                            <input type="password" class="form-control" id="oldPassword" name="oldPassword"  placeholder="原密码">
+                                            <span class="alert alert-danger" th:text="${error}" th:if="${error != null}"></span>
+                                            <label for="newPassword">密码:</label>
+                                            <input type="password" class="form-control" id="newPassword" name="newPassword" placeholder="新密码">
+                                            <br>
+                                            <button type="submit" class="btn btn-success">修改密码</button>
+                                        </form>
+                                    </div>
+
+                                </div>
+
+                        </div>
+
+                    </div>
+                </div>
             </div>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'replies' || section == 'questions'}">
-                <nav aria-label="Page navigation">
-                    <ul class="pagination">
-                        <li th:if="${pagination.showFirstPage}">
-                            <a th:href="@{'/profile/'+${section}(page=1,area=${area})}" aria-label="Previous">
-                                <span aria-hidden="true">&lt;&lt;</span>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'replies'}" style="margin-left: 220px">
+                <nav class="inpage-nav">
+                    <ul class="pagination inpage-nav-ul">
+                        <li class="page-item" th:if="${pagination.showPrevious}">
+                            <a class="page-link" th:href="@{'/profile/'+${section}(page=${pagination.page -1},area=${area})}" aria-label="Previous">
+                                <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
-                        <li th:if="${pagination.showPrevious}">
-                            <a th:href="@{'/profile/'+${section}(page=${pagination.page -1},area=${area})}" aria-label="Previous">
-                                <span aria-hidden="true">&lt;</span>
-                            </a>
-                        </li>
-                        <li th:each="page:${pagination.pages}" th:class="${pagination.page == page}? 'active':''">
-                            <a th:href="@{'/profile/'+${section}(page=${page},area=${area})}" th:text="${page}">
+                        <li th:each="page:${pagination.pages}" th:class="${pagination.page == page}? 'page-item active':'page-item'">
+                            <a class="page-link" th:href="@{'/profile/'+${section}(page=${page},area=${area})}" th:text="${page}">
 
                             </a>
                         </li>
                         <li th:if="${pagination.showNext}">
-                            <a th:href="@{'/profile/'+${section}(page=${pagination.page+1},area=${area})}" aria-label="Next">
-                                <span aria-hidden="true">&gt;</span>
-                            </a>
-                        </li>
-                        <li th:if="${pagination.showEndPage}">
-                            <a th:href="@{'/profile/'+${section}(page=${pagination.totalPage},area=${area})}" aria-label="Next">
-                                <span aria-hidden="true">&gt;&gt;</span>
+                            <a class="page-link" th:href="@{'/profile/'+${section}(page=${pagination.page+1},area=${area})}" aria-label="Next">
+                                <span aria-hidden="true">&raquo;</span>
                             </a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </div>
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <div class="list-group">
-                <a href="/profile/information" th:class="${section == 'information'}? 'active list-group-item': 'list-group-item'" >个人资料</a>
-                <a href="/profile/questions" th:class="${section == 'questions'}? 'active list-group-item': 'list-group-item'" >我的问题</a>
-                <a href="/profile/replies" th:class="${section == 'replies'}? 'active list-group-item': 'list-group-item'">
-                    最新回复<span class="badge" th:text="${session.unReadCount}"></span>
-                </a>
-            </div>
-        </div>
+
+
     </div>
 </div>
 <div th:insert="~{footer :: foot}"></div>
