--- a/src/main/resources/templates/recommendation.html
+++ b/src/main/resources/templates/recommendation.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="/css/forum.css"/>
     <link rel="stylesheet" href="/css/editormd.preview.min.css"/>
+    <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
+    <link rel="stylesheet" href="/css/general.css"/>
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
     <script src="/js/moment.js" type="application/javascript"></script>
@@ -23,19 +25,19 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <!--正文-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4><span th:text="${recommendation.title}"></span></h4>
+                <h3><span th:text="${recommendation.title}"></span></h3>
                 <span class="text-desc" style="font-size: 12px;font-weight: normal;color: #999">
                 作者：<span th:text="${recommendation.user.name}"></span>|
                 发布时间：<span th:text="${#dates.format(recommendation.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>|
                 阅读数：<span th:text="${recommendation.viewCount}"></span>|
-                点赞数：<a><span class="glyphicon glyphicon-thumbs-up" th:data-id="${recommendation.id}"
+                点赞数：<a><span class="fa fa-thumbs-o-up" th:data-id="${recommendation.id}"
                              onclick="incRecommendLike(this)"></span>
                       </a>
                 <span th:text="${recommendation.likeCount}" id="recommendLike"></span>
                 </span>
                 <hr>
                 <!--问题内容-->
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="recommend-view">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 post-content" id="recommend-view">
                     <textarea style="display:none;" th:text="${recommendation.description}"></textarea>
                 </div>
                 <script type="text/javascript">
@@ -48,7 +50,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <span class="label label-info" th:each="tag : ${recommendation.tag.split(',|，')}"
                           style="margin-left: 10px; font-size: 15px">
-                        <span class="glyphicon glyphicon-tags"></span>
+                        <span class="fa fa-tags"></span>
                         <span class="label label-info" th:text="${tag}"></span>
                     </span>
                 </div>
